--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <h>PHARRELLWILLIAMS</h>
     <meta charset="UTF-8">
     <title>HTML Album Cover</title>
     <link rel="stylesheet" href="css/style.css">
@@ -10,7 +11,7 @@
       <div id="front" class="album">
         <div id="title-box">
 
-          <!-- Level 4 'PHARRELL WILLIAMS' Header -->
+        <h4>PHARRELLWILLIAMS</h4>
 
           <!-- Level 2 'HAPPY' Header -->
 
